--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "express": "^4.17.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.0"
