--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     ]
   },
   "dependencies": {
+    "apollo-server": "^2.19.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "express": "^4.17.1",
+    "graphql": "^15.4.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.0"
